# CMake build for psd_sdk
# Copyright 2023, heavenstone <heavenstone1308@gmail.com>
# See LICENSE.txt for licensing details (2-clause BSD License: https://opensource.org/licenses/BSD-2-Clause)

cmake_minimum_required(VERSION 3.2)

project(Psd)

add_subdirectory(src/Psd)
add_subdirectory(src/Samples)
